--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -6,10 +6,6 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content style="text-align: left;">
-      <h2 class="card-subTitle mainGris">Descripción de la factura</h2>
-      <p><strong>Número de factura:</strong> {{ addressForm.get( 'numeroFactura' ).value }} </p>
-      <p><strong>Fecha de factura:</strong> {{ addressForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }} </p>
-      <p style="margin-top: 10px;"><strong>Valor facturado: </strong> {{ valorFacturado | currency:'':'symbol-narrow':'.0-0' }} </p>
       <h2 class="card-subTitle mainGris">Descuentos dirección técnica asociados a la factura</h2>
       <p>
         <b>¿Aplican descuentos?: </b>
@@ -17,7 +13,7 @@
         <span *ngIf="addressForm.get('aplicaDescuento' ).value === false"> No </span>
       </p>
 
-      <div *ngIf="addressForm.get( 'aplicaDescuento' ).value == true">
+      <div *ngIf="addressForm.get( 'aplicaDescuento' ).value == true && descuentos.length > 0">
           <p><b>¿Cuántos descuentos se aplican sobre la factura?: </b> {{ descuentos.length }} </p>
 
           <div class="mt-1em" *ngFor="let descuento of descuentos.controls; index as i">
