--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-detalle-factura-proyectos/form-detalle-factura-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-detalle-factura-proyectos/form-detalle-factura-proyectos.component.html
@@ -36,7 +36,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Seleccionar </th>
                 <td mat-cell *matCellDef="let element" align="center">
                     <section class="example-section">
-                        <mat-checkbox [(ngModel)]="element.check" (ngModelChange)="projectSelect()"></mat-checkbox>
+                        <mat-checkbox [(ngModel)]="element.check" (ngModelChange)="projectSelect()" [disabled]="esVerDetalle"></mat-checkbox>
                     </section>
                 </td>
             </ng-container>
@@ -53,6 +53,7 @@
                                     [contrato]="contrato"
                                     [listaMenusId]="listaMenusId"
                                     [registrarSolicitudPagoObs]="registrarSolicitudPagoObs"
+                                    [esVerDetalle]="esVerDetalle"
                                     (estadoSemaforoProyecto)="proyecto.get( 'registroCompleto' ).setValue( $event );checkRegistroCompleto()">
                 </app-form-proyecto>
             </div>
