--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-registrar-solicitud-de-pago/form-registrar-solicitud-de-pago.component.html
@@ -32,108 +32,57 @@
     </table>
   </div>
 
-  <form [formGroup]="addressForm" novalidate (ngSubmit)="guardar()">
-    <mat-card class="shipping-card" style="margin-top: 3em">
-      <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text"> Registro </mat-card-title>
-      </mat-card-header>
-      <mat-card-content style="text-align: left">
-        <div class="row">
-          <div class="col-md-8">
-            <div class="row">
-              <div class="pr-1">
-                <label  class="label-left"
-                        for="fechaSolicitud"
-                        [ngClass]="{ 'color-secondaryColor': (addressForm.get('fechaSolicitud').invalid && addressForm.get('fechaSolicitud').touched) || (addressForm.get('fechaSolicitud').invalid && estaEditando) }">
-                        Fecha de solicitud
-                </label>
-              </div>
-              <div class="col d-flex align-items-center">
-                <mat-form-field class="example-full-width">
-                  <input  matInput
-                          formControlName="fechaSolicitud"
-                          [min]="minDate"
-                          [matDatepicker]="pickerFechaRevision"
-                          readonly
-                          (click)="pickerFechaRevision.open()"
-                          required
-                          placeholder="DD/MM/AAAA">
-                          <mat-datepicker #pickerFechaRevision></mat-datepicker>
-                </mat-form-field>
-                <button mat-button
-                        color="primary"
-                        type="button"
-                        (click)="pickerFechaRevision.open()"
-                        class="btn-calendario">
-                        <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
-                </button>
-              </div>
-              <span class="icon-incompleto">
-                <img  class="icon-incompleto--img"
-                      src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-                      [matTooltipPosition]="'above'"
-                      matTooltip="Debe ingresar la información en el campo para continuar"
-                      matTooltipClass="info-tooltip"
-                      *ngIf="(addressForm.get('fechaSolicitud').invalid && addressForm.get('fechaSolicitud').touched) || (addressForm.get('fechaSolicitud').invalid && estaEditando)">
-              </span>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8">
-            <div class="row">
-              <div class="pr-1">
-                <label  for="numeroRadicado"
-                        class="label-left"
-                        [ngClass]="{ 'color-secondaryColor': (addressForm.get('numeroRadicado').invalid && addressForm.get('numeroRadicado').touched) || (addressForm.get('numeroRadicado').invalid && estaEditando)}">
-                        Número de radicado SAC</label>
-              </div>
-              <div class="col d-flex">
-                <mat-form-field class="full-width">
-                  <input  matInput
-                          #numeroRadicado
-                          type="text"
-                          maxlength="20"
-                          formControlName="numeroRadicado"
-                          required>
-                </mat-form-field>
-                <span class="contador">{{ 20 - numeroRadicado.value.length }}</span>
-              </div>
-              <span class="icon-incompleto">
-                <img  class="icon-incompleto--img"
-                      src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-                      [matTooltipPosition]="'above'"
-                      matTooltip="Debe ingresar la información en el campo para continuar"
-                      matTooltipClass="info-tooltip"
-                      *ngIf="(addressForm.get('numeroRadicado').invalid && addressForm.get('numeroRadicado').touched) || (addressForm.get('numeroRadicado').invalid && estaEditando)">
-              </span>
-            </div>
-          </div>
-        </div>
-        <!--
-          Se comenta el campo Fase del contrato por control de cambios 23 y flujo multiproyecto
-          El campo se mueve al acordeon "Detalle factura para proyectos asociados" y es asociado a cada proyecto seleccionado
-
+  <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+    <form [formGroup]="addressForm">
+      <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
+        <mat-card-header class="header-card header-card--margin">
+            <mat-card-title class="header-card--text textoGris">
+              Registro
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content style="text-align: left;">
+            <p style="margin-bottom: 2em;"><strong>Fecha de solicitud:</strong> {{ addressForm.get( 'fechaSolicitud' ).value | date: 'dd/MM/yyyy' }} </p>
+            <p style="margin-top: 2em;"><strong style="font-size: 16px;">Número de radicado SAC:</strong> {{ addressForm.get( 'numeroRadicado' ).value }} </p>
+        </mat-card-content>
+      </mat-card>
+    </form>
+  </ng-container>
+  <ng-template #noEsVerDetalle>
+    <form [formGroup]="addressForm" novalidate (ngSubmit)="guardar()">
+      <mat-card class="shipping-card" style="margin-top: 3em">
+        <mat-card-header class="header-card header-card--margin">
+          <mat-card-title class="header-card--text"> Registro </mat-card-title>
+        </mat-card-header>
+        <mat-card-content style="text-align: left">
           <div class="row">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
                   <label  class="label-left"
-                          for="faseContrato"
-                          [ngClass]="{ 'color-secondaryColor': (addressForm.get('faseContrato').invalid && addressForm.get('faseContrato').touched) || (addressForm.get('faseContrato').invalid && estaEditando) }">
-                          Fase del contrato
+                          for="fechaSolicitud"
+                          [ngClass]="{ 'color-secondaryColor': (addressForm.get('fechaSolicitud').invalid && addressForm.get('fechaSolicitud').touched) || (addressForm.get('fechaSolicitud').invalid && estaEditando) }">
+                          Fecha de solicitud
                   </label>
                 </div>
-                <div class="col">
-                  <mat-form-field class="select-width">
-                    <mat-select multiple formControlName="faseContrato" required (ngModelChange)="getValueFase($event)">
-                      <mat-option *ngFor="let fase of fasesArray" [value]="fase.codigo">
-                        {{ fase.nombre }}
-                      </mat-option>
-                    </mat-select>
+                <div class="col d-flex align-items-center">
+                  <mat-form-field class="example-full-width">
+                    <input  matInput
+                            formControlName="fechaSolicitud"
+                            [min]="minDate"
+                            [matDatepicker]="pickerFechaRevision"
+                            readonly
+                            (click)="pickerFechaRevision.open()"
+                            required
+                            placeholder="DD/MM/AAAA">
+                            <mat-datepicker #pickerFechaRevision></mat-datepicker>
                   </mat-form-field>
+                  <button mat-button
+                          color="primary"
+                          type="button"
+                          (click)="pickerFechaRevision.open()"
+                          class="btn-calendario">
+                          <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
+                  </button>
                 </div>
                 <span class="icon-incompleto">
                   <img  class="icon-incompleto--img"
@@ -142,49 +91,118 @@
                         [matTooltipPosition]="'above'"
                         matTooltip="Debe ingresar la información en el campo para continuar"
                         matTooltipClass="info-tooltip"
-                        *ngIf=" (addressForm.get('faseContrato').invalid && addressForm.get('faseContrato').touched) || (addressForm.get('faseContrato').invalid && estaEditando)">
+                        *ngIf="(addressForm.get('fechaSolicitud').invalid && addressForm.get('fechaSolicitud').touched) || (addressForm.get('fechaSolicitud').invalid && estaEditando)">
                 </span>
               </div>
             </div>
           </div>
-        -->
-      </mat-card-content>
-    </mat-card>
-
-    <mat-card class="shipping-card var-main-gris" style="margin-top: 3em" *ngIf="observacion !== undefined">
-      <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text textoGris">
-          Observación {{ esAutorizar === true ? 'de la coordinación' : 'del apoyo a la supervisión' }}
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content style="text-align: left">
-        <p>
-          <b> {{ observacion.fechaCreacion | date: 'dd/MM/yyyy' }} </b>
-        </p>
-        <p *ngIf="observacion.tieneObservacion === true">
-          <b
-            >¿Desde {{ esAutorizar === true ? 'la coordinación' : 'el apoyo a la supervisión' }} tiene observaciones al
-            registro de la solicitud?:</b
-          >
-          Si
-        </p>
-        <p *ngIf="observacion.tieneObservacion === false">
-          <b
-            >¿Desde {{ esAutorizar === true ? 'la coordinación' : 'el apoyo a la supervisión' }} tiene observaciones al
-            registro de la solicitud?:</b
-          >
-          No
-        </p>
-        <section [innerHTML]="observacion.observacion" *ngIf="observacion.tieneObservacion === true"></section>
-      </mat-card-content>
-    </mat-card>
-
-    <div class="text-center mb-2em">
-      <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === false">
-        <img src="assets/img/icon/guardar.svg" alt="Regresar" />
-      </button>
-    </div>
-  </form>
+          <div class="row">
+            <div class="col-md-8">
+              <div class="row">
+                <div class="pr-1">
+                  <label  for="numeroRadicado"
+                          class="label-left"
+                          [ngClass]="{ 'color-secondaryColor': (addressForm.get('numeroRadicado').invalid && addressForm.get('numeroRadicado').touched) || (addressForm.get('numeroRadicado').invalid && estaEditando)}">
+                          Número de radicado SAC</label>
+                </div>
+                <div class="col d-flex">
+                  <mat-form-field class="full-width">
+                    <input  matInput
+                            #numeroRadicado
+                            type="text"
+                            maxlength="20"
+                            formControlName="numeroRadicado"
+                            required>
+                  </mat-form-field>
+                  <span class="contador">{{ 20 - numeroRadicado.value.length }}</span>
+                </div>
+                <span class="icon-incompleto">
+                  <img  class="icon-incompleto--img"
+                        src="assets/img/icon/incompleto.svg"
+                        alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip"
+                        *ngIf="(addressForm.get('numeroRadicado').invalid && addressForm.get('numeroRadicado').touched) || (addressForm.get('numeroRadicado').invalid && estaEditando)">
+                </span>
+              </div>
+            </div>
+          </div>
+          <!--
+            Se comenta el campo Fase del contrato por control de cambios 23 y flujo multiproyecto
+            El campo se mueve al acordeon "Detalle factura para proyectos asociados" y es asociado a cada proyecto seleccionado
+  
+            <div class="row">
+              <div class="col-md-8">
+                <div class="row">
+                  <div class="pr-1">
+                    <label  class="label-left"
+                            for="faseContrato"
+                            [ngClass]="{ 'color-secondaryColor': (addressForm.get('faseContrato').invalid && addressForm.get('faseContrato').touched) || (addressForm.get('faseContrato').invalid && estaEditando) }">
+                            Fase del contrato
+                    </label>
+                  </div>
+                  <div class="col">
+                    <mat-form-field class="select-width">
+                      <mat-select multiple formControlName="faseContrato" required (ngModelChange)="getValueFase($event)">
+                        <mat-option *ngFor="let fase of fasesArray" [value]="fase.codigo">
+                          {{ fase.nombre }}
+                        </mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+                  <span class="icon-incompleto">
+                    <img  class="icon-incompleto--img"
+                          src="assets/img/icon/incompleto.svg"
+                          alt="este campo es requerido"
+                          [matTooltipPosition]="'above'"
+                          matTooltip="Debe ingresar la información en el campo para continuar"
+                          matTooltipClass="info-tooltip"
+                          *ngIf=" (addressForm.get('faseContrato').invalid && addressForm.get('faseContrato').touched) || (addressForm.get('faseContrato').invalid && estaEditando)">
+                  </span>
+                </div>
+              </div>
+            </div>
+          -->
+        </mat-card-content>
+      </mat-card>
+  
+      <mat-card class="shipping-card var-main-gris" style="margin-top: 3em" *ngIf="observacion !== undefined">
+        <mat-card-header class="header-card header-card--margin">
+          <mat-card-title class="header-card--text textoGris">
+            Observación {{ esAutorizar === true ? 'de la coordinación' : 'del apoyo a la supervisión' }}
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content style="text-align: left">
+          <p>
+            <b> {{ observacion.fechaCreacion | date: 'dd/MM/yyyy' }} </b>
+          </p>
+          <p *ngIf="observacion.tieneObservacion === true">
+            <b
+              >¿Desde {{ esAutorizar === true ? 'la coordinación' : 'el apoyo a la supervisión' }} tiene observaciones al
+              registro de la solicitud?:</b
+            >
+            Si
+          </p>
+          <p *ngIf="observacion.tieneObservacion === false">
+            <b
+              >¿Desde {{ esAutorizar === true ? 'la coordinación' : 'el apoyo a la supervisión' }} tiene observaciones al
+              registro de la solicitud?:</b
+            >
+            No
+          </p>
+          <section [innerHTML]="observacion.observacion" *ngIf="observacion.tieneObservacion === true"></section>
+        </mat-card-content>
+      </mat-card>
+  
+      <div class="text-center mb-2em">
+        <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === false">
+          <img src="assets/img/icon/guardar.svg" alt="Regresar" />
+        </button>
+      </div>
+    </form>
+  </ng-template>
+  
 
   <!--
   <div *ngIf="tienePreconstruccion === true">
