--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-nueva-solicitud-pago/registrar-nueva-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-nueva-solicitud-pago/registrar-nueva-solicitud-pago.component.html
@@ -295,7 +295,34 @@
                     <mat-expansion-panel class="expansion-style">
                         <mat-expansion-panel-header class="expansion-style--header">
                             <mat-panel-title class="expansion-style--title en-alerta">
+                                Descripción de la factura
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                    </mat-expansion-panel>
+                </mat-accordion>
+                <mat-accordion>
+                    <mat-expansion-panel class="expansion-style">
+                        <mat-expansion-panel-header class="expansion-style--header">
+                            <mat-panel-title class="expansion-style--title en-alerta">
+                                Detalle factura para proyectos asociados
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                    </mat-expansion-panel>
+                </mat-accordion>
+                <mat-accordion>
+                    <mat-expansion-panel class="expansion-style">
+                        <mat-expansion-panel-header class="expansion-style--header">
+                            <mat-panel-title class="expansion-style--title en-alerta">
                                 Validar lista de chequeo
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                    </mat-expansion-panel>
+                </mat-accordion>
+                <mat-accordion>
+                    <mat-expansion-panel class="expansion-style">
+                        <mat-expansion-panel-header class="expansion-style--header">
+                            <mat-panel-title class="expansion-style--title en-alerta">
+                                Soporte de la solicitud
                             </mat-panel-title>
                         </mat-expansion-panel-header>
                     </mat-expansion-panel>
