--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-proyecto/form-proyecto.component.html
@@ -60,7 +60,7 @@
                             </app-form-criterios-pago>
                         </mat-expansion-panel>
 
-                        <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="fase.get( 'codigo' ).value === fasesContrato.construccion">
+                        <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="fase.get( 'codigo' ).value === fasesContrato.construccion && manejoAnticipoRequiere === true">
                             <mat-expansion-panel-header class="expansion-style--header">
                                 <mat-panel-title class="expansion-style--title font-size-09em">
                                     Amortización del anticipo - {{ fase.get( 'codigo' ).value === fasesContrato.preConstruccion ? 'Fase 1' : 'Fase 2' }}
